--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
-    "expo": "^54.0.13",
+    "expo": "54.0.15",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
