--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.28",
     "expo": "54.0.15",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-elements": "^3.4.3",
